--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">Quem somos</a></li>
-						<li><a href="">Contato</a></li>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="info.html">Quem somos</a></li>
+						<li><a href="contact.html">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -29,7 +29,7 @@
 						pariatur tempora repellat aspernatur mollitia?
 					</p>
 				</div>
-				<div style="border-top: 1px solid lightgrey; padding-top: 10px;">
+				<div style="border-top: 1px solid lightgrey; padding-top: 10px">
 					<form action="">
 						<label for="email">E-mail:</label>
 						<input type="text" id="email" />
