--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">Quem somos</a></li>
-						<li><a href="">Contato</a></li>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="info.html">Quem somos</a></li>
+						<li><a href="contact.html">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
