--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="info.html">Quem somos</a></li>
 						<li><a href="contact.html">Contato</a></li>
 					</ul>
